[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Collectable/GreatCylinder.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]

[sub_resource type="CylinderMesh" id=2]

[node name="GreatCylinder" type="Area"]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0 )
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )
disabled = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area_body_exited"]
